# pdiag

./: README.md  pyproject.toml
dpdiagrams/: diagrams.py
pdiagrams/: cli.py
tests/: test_data_platform_diagrams.py  test_pdiagrams.py
