[tool.poetry]
name = "pdiagrams"
version = "0.1.0"
description = "Print Diagrams"
authors = ["Pedro Sanchez <pedro.sanchez@shopify.com>"]

[tool.poetry.dependencies]
python = "^3.6"
diagrams = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
diagrams = "^0.13.1"

[tool.poetry.scripts]
pdiag = "pdiagrams.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
